--- a/Multiselect.css
+++ b/Multiselect.css
@@ -1,7 +1,7 @@
-
 .multiselect {
 	display: inline-block;
 	position: relative;
+	font-size: 1rem;
 }
 
 .multiselect * {
@@ -36,13 +36,20 @@
 }
 
 .multiselect .toggler {
+	display: flex;
+	font-size: 1em;
 	background: #fff;
 	margin: 0;
-	padding: 0;
+	padding: 0 .1em;
 	border: 1px solid #ddd;
 	border-radius: 0 3px 3px 0;
 	border-left: none;
 	cursor: pointer;
+}
+
+.multiselect .toggler img {
+	width: 2em;
+	height: 2em;
 }
 
 .multiselect .toggler:focus {
